--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -7,37 +7,32 @@ body {
     font-family: 'mortal-kombat-font', sans-serif;
     max-width: 1280px;
     margin: 0 auto;
-    background-image: url('/src/imagens/the-courtyard-arena.png');
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100%;
     background-color: #8c8484;
     color: #f5f5f5;
 }
 
 body.modo-escuro {
-    background-image: url('/src/imagens/background-bridge.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
     background-color: #000031;
     color: #e7f708;
+}
+
+body.imagem-fundo {
+    background-image: url('/src/imagens/the-courtyard-arena.png');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    padding: 25px;
+    padding: 20px;
 }
 
 header .logo,
 header .imagem-botao {
     width: 30px;
     transition: 0.2s ease-in-out;
-}
-
-header .imagem-botao {
-    width: 70px;
-    height: 40px;
 }
 
 header #botao-alterar-tema {
